styles/style.css
/* Section Styling */
header {
  display: flex;
  gap: 1rem;
  flex-direction: column;
  align-items: end;
  justify-content: center;
  width: 100%;
  height: fit-content;
  max-width: 1080px;
  margin: 0;
  transition: all 1s ease-in-out;
}

main {
  max-width: 800px;
  transition: max-width 1s ease-in-out;
}

body > div.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 2rem;
  background-image: url("../assets/bg-desktop.svg");
  background-position: top;
  background-size: cover;
  background-repeat: no-repeat;
  margin-bottom: 25px;
  transition: margin-bottom 0.1s ease-in-out;
}

section {
  min-height: 100vh;
  display: grid;
  place-items: center;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr 3fr;
}

section#about {
  padding-top: 2rem;
  min-height: auto;
}

section#about > div.content > p {
  text-align: left;
  margin-bottom: 0;
  transition: all 1s ease-in-out;
}

section#skills > div.content-container > div.content:hover,
.project-item:hover,
#project-slideshow:hover {
  transform: translate(-20px, -20px);
  box-shadow: var(--backdrop-hover);
}

section,
section#skills > div.content-container,
section#projects > div.content {
  display: grid;
  place-items: center;
  margin-bottom: 75px;
  gap: 3rem;
  width: 100%;
}

section#projects > div.content {
  display: grid;
  grid-template-columns: 1fr 1fr;
  transition: all 1s linear;
}

section#skills > div.content-container {
  gap: 1.5rem;
}

section#skills > div.content-container > div.content {
  display: grid;
  place-items: center;
  background-color: var(--lighter-color);
  border-radius: 10px;
  padding: 30px 30px 0;
  box-shadow: var(--backdrop);
  width: 100%;
  transition: all 0.25s ease-in-out;
}

div.section-header {
  display: grid;
  place-items: center;
}

div.content > p {
  text-align: center;
  margin-bottom: 30px;
}

div.content > h4,
div.content > h3 {
  text-align: center;
}

/* Custom Element Styling */

hr {
  width: 12%;
  border: 2px solid var(--dark-sf);
  border-radius: 2px;
  margin-bottom: 30px;
}

.portfolio-image {
  min-width: var(--md-pfolio-img);
  min-height: var(--md-pfolio-img);
  border-radius: 50%;
  border: 10px solid var(--dark-sf);
  background-image: url("../assets/imgs/me_500x500.webp");
  background-position: center;
  background-size: cover;
  transition: all 1s ease-in-out;
}

.project-item {
  background-color: var(--lighter-color);
  padding: 15px;
  min-height: 250px;
  height: 250px;
  border-radius: 12px;
  box-shadow: var(--backdrop);
  width: 100%;
  transition: all 0.25s ease-in-out;
}

.project-item-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: rgb(42, 42, 42);
  padding: 10px;
  height: 100%;
  border-radius: 10px;
}

.project-item-content > p {
  color: white;
  padding: 15px 10px 10px;
  font-size: var(--sm-text-size);
  font-weight: var(--medium-text-weight);
}

.project-item-content > a {
  width: fit-content;
}

.project-item-content > a > h3 {
  margin: 0;
  width: fit-content;
}

a.social-link {
  width: fit-content;
  height: fit-content;
}

.social-icons {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 0.5rem;
  margin: 1rem;
}

.social-icon {
  filter: none;
  fill: var(--dark-sf);
  transition: all 0.125s ease-in-out;
}

.social-icon:hover {
  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.2));
  fill: white;
}

header > nav > ul > li:nth-of-type(5) {
  visibility: hidden;
  position: absolute;
}

footer {
  display: flex;
  align-items: center;
  justify-items: center;
  flex-direction: column;
  max-width: 1080px;
}

footer > nav {
  width: 75%;
  margin-bottom: 25px;
}

footer > p.copyright {
  text-align: center;
  font-weight: var(--medium-text-weight);
  font-size: 14px;
}

footer > nav > ul {
  display: flex;
  justify-content: space-around;
}

footer > nav > ul > li > a {
  color: var(--dark-sf);
  font-weight: 400;
  margin: 0.5rem;
}

div#project-slideshow {
  display: grid;
  place-items: center;
  width: 100%;
  background-color: var(--light-sf);
  box-shadow: var(--backdrop);
  border-radius: 25px;
  overflow: hidden;
  transition: all 0.25s ease-in-out;
}

a#project-slideshow-link {
  width: fit-content;
  height: fit-content;
}

div#project-slideshow-img {
  height: 50vh;
  width: 100%;
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  transition: all 0.1s linear;
}

#slideshow-controls {
  display: grid;
  place-items: center;
  grid-template-columns: 1fr 5fr 1fr;
  width: 100%;
  height: 100%;
}

#slideshow-controls > button {
  width: 100%;
  height: 100%;
  opacity: 100%;
  z-index: 10;
  border: none;
  color: var(--dark-sf);
  background-color: var(--lighter-sf);
  font-size: var(--xxl-text-size);
  transition: all 0.125s ease-in-out;
}

#slideshow-controls > button:hover {
  color: white;
  background-color: var(--dark-sf);
  cursor: pointer;
}

.project-slideshow-content {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 2fr 2.5fr;
  height: 100%;
  width: 100%;
}

.project-slideshow-content > div {
  display: grid;
  place-items: center;
  padding: 2rem 3rem;
  z-index: 9;
}

.project-slideshow-content-upper {
  display: grid;
  justify-content: end;
  align-content: start;
  width: 100%;
}

.project-slideshow-content-upper > a {
  font-size: var(--xl-text-size);
  font-weight: var(--medium-text-weight);
  color: var(--dark-sf);
  height: fit-content;
  width: fit-content;
}

.project-slideshow-content-upper > a:hover {
  color: white;
  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.2));
}

/* .project-slideshow-content-lower {
  display: grid;
  justify-content: start;
  align-content: end;
  width: 110%;
  height: 100%;
  opacity: 30%;
  background-color: var(--dark-sf);
  transform: translateY(60%) translateX(-5%) rotate(5deg);
  transition: all 0.25s ease-in-out;

   --wave-mask: radial-gradient(92.53px at 50% 125.4px, #000 99%, #0000 101%)
      calc(50% - 88px) 0/176px 100%,
    radial-gradient(92.53px at 50% -81.4px, #0000 99%, #000 101%) 50% 44px/176px
      100% repeat-x;
  -webkit-mask: var(--wave-mask);
  mask: var(--wave-mask);
}
*/

/*
.project-slideshow-content-lower:hover {
  opacity: 100%;
  width: 100%;
  transform: none;
}

.project-slideshow-content-lower > p {
  color: white;
  height: fit-content;
  width: fit-content;
}
*/

